# curite

./: .travis.yml  Cargo.toml  LICENSE  README.md  config.example.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
curite/: __init__.py  __main__.py  ahttpd.py  config.py  httpd.py
curite_form/: Cargo.toml
curite_form/src/: main.rs
src/: config.rs  error.rs  filters.rs  main.rs  router.rs  xmlrpc.rs
src/contexts/: mod.rs  verify.rs
src/handlers/: mod.rs  verify.rs
templates/: verify.html
