[package]
name = "curite"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libera-Chat/curite.git"
homepage = "https://github.com/Libera-Chat/curite"
description = "nickserv account verification URL bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
dxr_client = { version = "0.6.2", features = ["reqwest"] }
http = "1.1.0" # warp is stuck on an old version
http-serde = "1.1.3"
hyper = "1.4.1"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.13"
tera = "1.20.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
url = { version = "2.5.2", features = ["serde"] }
warp = "0.3.7"
