[package]
name = "curite"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libera-Chat/curite.git"
homepage = "https://github.com/Libera-Chat/curite"
description = "nickserv account verification URL bot"

rust-version = "1.85" # async closures

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["http1", "http2", "tokio"] }
clap = { version = "4.5.9", features = ["derive"] }
dxr_client = { version = "0.7.0", features = ["reqwest"] }
http = "1.3.1"
http-serde = "2.1.1"
percent-encoding = "2.1.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.13"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.38.0", features = ["full"] }
url = { version = "2.5.6", features = ["serde"] }
